fix: intro background contain to prevent cropping
- Change background-size from cover to contain
- Add black background color
- Center image without repeat

--- a/src/components/IntroScreen.css
+++ b/src/components/IntroScreen.css
@@ -15,8 +15,10 @@
   width: 100%;
   height: 100%;
   background-image: url('/images/intro-background.png');
-  background-size: cover;
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
+  background-color: #000;
   filter: brightness(0.5);
 }
 
